# autonomousMOVIEMAKER

./: .gitignore  LICENSE  README.md  pyproject.toml
autonomousmoviemaker/: __init__.py
autonomousmoviemaker/core/: __init__.py  config.py  models.py  movie_maker.py  pipeline.py
autonomousmoviemaker/generators/: __init__.py  base.py
autonomousmoviemaker/integrations/: __init__.py  anthropic_generator.py  mock_generator.py  openai_generator.py  runway_generator.py  stability_generator.py
docs/: index.html
examples/: __init__.py  advanced_example.py  basic_example.py  cli_example.py  custom_generator_example.py
