[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-moviemaker"
version = "1.0.0"
description = "The Ultimate AI-Powered Movie Generation Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "autonomousMOVIEMAKER Team", email = "hello@autonomousmoviemaker.io"}
]
keywords = [
    "ai",
    "movie",
    "video",
    "generation",
    "film",
    "creative",
    "automation",
    "gpt",
    "stable-diffusion",
    "runway",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
stability = [
    # Uses aiohttp, already in base dependencies
]
runway = [
    # Uses aiohttp, already in base dependencies
]
replicate = [
    "replicate>=0.22.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]
all = [
    "autonomous-moviemaker[openai]",
    "autonomous-moviemaker[anthropic]",
    "autonomous-moviemaker[stability]",
    "autonomous-moviemaker[runway]",
    "autonomous-moviemaker[replicate]",
]

[project.urls]
Homepage = "https://autonomousmoviemaker.io"
Documentation = "https://docs.autonomousmoviemaker.io"
Repository = "https://github.com/autonomousMOVIEMAKER/autonomousMOVIEMAKER"
Issues = "https://github.com/autonomousMOVIEMAKER/autonomousMOVIEMAKER/issues"
Changelog = "https://github.com/autonomousMOVIEMAKER/autonomousMOVIEMAKER/blob/main/CHANGELOG.md"

[project.scripts]
autonomous-moviemaker = "autonomousmoviemaker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["autonomousmoviemaker*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=autonomousmoviemaker"
